--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -86,8 +86,7 @@
 
         <activity
             android:name=".SettingsActivity"
-            android:label="@string/title_activity_settings"
-            android:noHistory="true" />
+            android:label="@string/title_activity_settings" />
 
         <service
             android:name=".MqttService"
@@ -120,6 +119,8 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/app_widget_one_info" />
         </receiver>
+
+        <activity android:name=".ConfigWidget"></activity>
     </application>
 
 </manifest>
